# river

./: .gitignore  Cargo.toml  README.md  docs.md  install.ps1  install.sh
.github/workflows/: pr.yml  release.yml
docs/: integration-test-framework-design.md
docs/plans/: 2026-06-20-integration-tests.md
docs/superpowers/: 2026-06-21-cross-db-optimization-and-e2e-tests-design.md
docs/superpowers/plans/: 2026-06-21-cross-db-optimization-and-e2e-tests.md
infra/: README.md  docker-compose.yml  init-mysql.sql  river.yaml  seed.py
src/: error.rs  lib.rs  main.rs
src/adapters/: mod.rs  mongodb.rs  mssql.rs  mysql.rs  postgres.rs  sqlite.rs
src/ai/: client.rs  mod.rs
src/ai/tests/: mod.rs
src/connection/: config.rs  mod.rs  pool.rs
src/engine/: executor.rs  mod.rs  planner.rs  translator.rs
src/engine/tests/: mod.rs
src/lang/: ast.rs  lexer.rs  mod.rs  parser.rs
src/lang/tests/: mod.rs
src/mcp/: docs.rs  mod.rs  resources.rs  server.rs  tools.rs
src/mcp/tests/: mod.rs
src/tui/: app.rs  highlight.rs  input.rs  mod.rs  output.rs  theme.rs  ui.rs
src/tui/tests/: mod.rs
tests/: adapter_tests.rs  cross_db_tests.rs  edge_cases.rs  mutations.rs  query_pipeline.rs
tests/common/: mod.rs
tests/integrations/: helpers.rs  main.rs  t01_basic_queries.rs  t02_filtering.rs  t03_joins.rs  t04_aggregation.rs  t05_window_functions.rs  t06_advanced_queries.rs  t07_cross_database.rs  t08_data_modification.rs  t09_meta_commands.rs  t10_schema.rs  t11_create_table.rs  t12_is_null.rs  t13_alter_table.rs  t14_drop_table.rs  t15_create_drop_database.rs
