[package]
name = "river"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
tokio-postgres = "0.7"
sqlx = { version = "0.9", features = ["mysql", "mysql-rsa", "postgres", "sqlite", "runtime-tokio", "rust_decimal", "time"] }
rust_decimal = "1"
mongodb = "3"
tiberius = { version = "0.12", default-features = false, features = ["tds73", "time", "rustls", "tokio-rustls"] }
time = { version = "0.3", features = ["formatting"] }
tokio-util = { version = "0.7", features = ["compat"] }
futures = "0.3"
chumsky = "0.9"
ariadne = "0.4"
async-trait = "0.1"
